syntax = "proto3";

option csharp_namespace = "API_Gate";
package greet;

service CatalogManagementService {
  rpc CreateProduct (CreateProductData) returns (ProductReply);
  rpc UpdateProduct (UpdateProductData) returns (ProductReply);
  rpc RemoveProduct (RemoveProductData) returns (ProductReply);
}

message CreateProductData {
  string title = 1;
  string description = 2;
  string price = 3;
}

message UpdateProductData {
  string id = 1;
  string title = 2;
  string description = 3;
  string price = 4;
}

message RemoveProductData {
  string id = 1;
}

message ProductReply {
  bool success = 1;
  string error = 2;
  string result = 3;
}
