syntax = "proto3";

option csharp_namespace = "AccountGatewayGRPC";
package greet;

import "google/protobuf/empty.proto";

service AccountGateway {
  rpc CreateAccount (CreateAccountData) returns (AccountReply);
  rpc UpdateAccount (UpdateAccountData) returns (AccountReply);
  rpc RemoveAccount (google.protobuf.Empty) returns (AccountReply);
}

message CreateAccountData {
  string tempUserId = 1;
  string firstName = 2;
  string lastName = 3;
  string surname = 4;
  string email = 5;
  string password = 6;
  string phoneNumber = 7;
  string dateOfBirthUtc = 8;
}

message UpdateAccountData {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string surname = 4;
  string email = 5;
  string password = 6;
  string phoneNumber = 7;
  string dateOfBirthUtc = 8;
}

message AccountReply {
  string accountId = 1;
  string message = 2;
  bool success = 3;
}
